<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/ic_title_new" />
        <item
            android:id="@+id/nav_highlight"
            android:icon="@drawable/ic_menu_world"
            android:title="@string/ic_title_highlight" />
        <item
            android:id="@+id/nav_newsTime"
            android:icon="@drawable/ic_menu_business"
            android:title="@string/ic_title_newsTime" />
        <item
            android:id="@+id/nav_footballVN"
            android:icon="@drawable/ic_menu_culture"
            android:title="@string/ic_title_footballVN" />
        <item
            android:id="@+id/nav_footballInter"
            android:icon="@drawable/ic_menu_environment"
            android:title="@string/ic_title_footballInter" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_business"
            android:title="@string/ic_title_entertainment" />
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_menu_fashion"
            android:title="@string/ic_title_world" />
        <item
            android:id="@+id/nav_law"
            android:icon="@drawable/ic_menu_sport"
            android:title="@string/ic_title_law" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_world"
            android:title="@string/ic_title_technology" />
        <item
            android:id="@+id/nav_cuisine"
            android:icon="@drawable/ic_menu_science"
            android:title="@string/ic_title_cuisine" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_menu_society"
            android:title="@string/ic_title_travel" />
      <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_world"
            android:title="@string/label_category" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather_24"
            android:title="@string/label_weather" />
    </group>
    <group
        android:id="@+id/menu_auth"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_24"
            android:title="@string/label_favorite" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/label_logout" />
    </group>
</menu>
