<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">
    <TextView
        android:layout_marginBottom="@dimen/sp20"
        android:id="@+id/title_search"
        style="@style/TitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="TÌM NHANH" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastKey01"
            android:text="@string/fastKey01"

            />
        <TextView
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastKey02"
            android:text="@string/fastKey02"

            />
        <TextView
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastKey03"
            android:text="@string/fastKey03"

            />
        <TextView
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastKey04"
            android:text="@string/fastKey04"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastKey05"
            android:text="@string/fastKey05"

            />
        <TextView
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastKey06"
            android:text="@string/fastKey06"

            />
        <TextView
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastKey07"
            android:text="@string/fastKey07"

            />
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/sp20"
        >


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Replaced android.support.v7.widget.RecyclerView with the new EmptyRecyclerView -->
            <com.example.android.newsfeed.EmptyRecyclerView
                android:id="@+id/recycler_view_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <!-- Empty view is only visible when the list has no items. -->
        <TextView
            android:id="@+id/empty_view_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium" />

        <!-- Loading indicator is only shown before the first load -->
        <ProgressBar
            android:id="@+id/loading_indicator_search"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>